# validar_mnnist

./: Makefile  README.md  app.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: modelo_sgd.pkl
notebooks/: Mnist_RandonForest_PCA.ipynb  mnist_sgd_base.ipynb
validar_mnist/: __init__.py  dataset.py  features.py  plots.py
validar_mnist/modeling/: predict.py  train.py
