[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "validar_mnist"
version = "0.0.1"
description = "validadando mnnist"
authors = [
  { name = "Andr\u00e9 Luiz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["validar_mnist"]
include = ["pyproject.toml", "validar_mnist/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["validar_mnist"]
force-sort-within-sections = true

